--- a/public/research/2018-04-17-country-music.Rmd
+++ b/public/research/2018-04-17-country-music.Rmd
@@ -1,9 +1,13 @@
 ---
-title: Country Music
+title: "Meta-Sounds in Modern Country Music: Lyrical Self-Referneces and Boundary Work 1989-2014"
 author: John A. Bernau
 date: '2018-04-17'
 slug: country-music
 categories: []
 tags: []
 ---
+John A. Bernau  
+  
+ABSTRACT: This article examines the rise of “self-references” in contemporary country music lyrics - descriptions of a ‘country’ lifestyle, specific styles of music consumption, or reference to famous artists. Using a dataset of 27,384 songs from 1989-2014, I show how these words constitute a meta-cultural practice that constructs and maintains genre boundaries, authenticity, and consecration. Becoming increasingly prevalent since the 1990s, self-references are also more likely to appear in debut albums, songs by Hall-of-Fame artists, and highly repetitive songs, while less likely to appear after Presidential elections. In sum, today’s artists use self-references to draw and perpetuate socio-cultural boundaries.  
 
+*Under Review* May 2018
