--- a/content/research/2018-04-17-country-music.Rmd
+++ b/content/research/2018-04-17-country-music.Rmd
@@ -19,3 +19,7 @@ ___
 ![](/research/cm_sr1.jpg)
 ![](/research/cm_sr2.jpg)
 ![](/research/cm_sr3.jpg)
+
+___
+
+### *Copyright &copy; 2018 John A. Bernau*
