--- a/content/blog/new-website.Rmd
+++ b/content/blog/new-website.Rmd
@@ -7,7 +7,7 @@ categories: []
 tags: []
 ---
 
-My new website is up! It is built by [Hugo](https://gohugo.io/) and deployed through [Netlify](https://www.netlify.com/). A huge thanks to Yihui Xie and colleagues for the [blogdown package in R](https://bookdown.org/yihui/blogdown/) and the many helpful tutorials on getting started ([like this one](https://alison.rbind.io/post/up-and-running-with-blogdown/)). Lastly, a major shout-out to my friend and colleague [Trent Ryan](https://trent.netlify.com/about/) for general R support and encouragement (and help with the cocoa theme!). 
+My new website is up! It is built by [Hugo](https://gohugo.io/) and deployed through [Netlify](https://www.netlify.com/). A huge thanks to Yihui Xie and colleagues for the [blogdown package in R](https://bookdown.org/yihui/blogdown/) and the many helpful tutorials on getting started ([like this one](https://alison.rbind.io/post/up-and-running-with-blogdown/)). For general R / data / blogging inspiration, check out [Julia Silge](https://juliasilge.com/)'s and [David Robinson](http://varianceexplained.org/)'s websites, as well as the editorial team at [The Pudding](https://pudding.cool/) who put together [beautiful data-visualization-driven essays](https://pudding.cool/2017/03/timeless/).  Lastly, a major shout-out to my friend and colleague [Trent Ryan](https://trent.netlify.com/about/) for general R support and encouragement (and help with the cocoa theme!).
 
 ___
 
