--- a/content/blog/2018-04-19-martin-levin-icpsr-training-award.Rmd
+++ b/content/blog/2018-04-19-martin-levin-icpsr-training-award.Rmd
@@ -7,20 +7,22 @@ categories: []
 tags: []
 ---
 
-<div style= "float:right;position: relative; top: -10px;">
-![](/blog/levin_bernau copy.jpeg)
+<div style= "float:right;position: relative; top: -10px; left: 10px;">
+[<img src="/blog/levin_bernau2.jpeg" height="500" />](/blog/levin_bernau2.jpeg)
 </div>
-Last week I was honored to receive the Martin Levin ICPSR Training Award at our annual Sociology Department awards ceremony. Marty Levin was a faculty member in the Emory University Sociology Department for many years, playing a key role in the methodological and statistical training of graduate students.  Marty also served on the Board of Governors of ICPSR ([Inter-University Consortium for Political and Social Research](https://www.icpsr.umich.edu/icpsrweb/index.jsp)). This award will give me the opportunity to attend a workshop over the summer and learn new methodologies for the statistical analysis of text as data. I plan to apply these new skills to my dissertation project which examines our changing language of death and dying in America. I am thankful to have such a supportive department and look forward to the workshop! 
+Last week I was honored to receive the Martin Levin ICPSR Training Award at our annual Sociology Department awards ceremony. Marty Levin was a faculty member in the Emory University Sociology Department for many years, playing a key role in the methodological and statistical training of graduate students. Marty also served on the Board of Governors of ICPSR ([Inter-University Consortium for Political and Social Research](https://www.icpsr.umich.edu/icpsrweb/index.jsp)). This award will give me the opportunity to attend a workshop over the summer and learn new methodologies for the statistical analysis of text as data. I plan to apply these new skills to my dissertation project which examines our changing language of death and dying in America. I am thankful to have such a supportive department and look forward to the workshop! 
 
-
-
+<br>
+<br>
 
 <div style="text-align: right"> *DGS [Dr. Ellen Idler](http://sociology.emory.edu/home/people/faculty/idler-ellen.html) and I* </div>
 
 <div style="text-align: right"> *April 19, 2018* </div>
 
 
-
+<br>
+<br>
+  
 ___
 
 ### *Copyright &copy; 2018 John A. Bernau*
