adding copyright footer to ajs

--- a/content/blog/ajs123_4.md
+++ b/content/blog/ajs123_4.md
@@ -34,3 +34,10 @@ ___
 ___
 
 **Logan, John R. and Matthew J. Martinez. 2017. “The Spatial Scale and Spatial Configuration of Residential Settlement: Measuring Segregation in the Postbellum South.” *American Journal of Sociology* 123(4):1161–1203.**
+
+<br>
+<br>
+  
+___
+
+### *Copyright &copy; 2018 John A. Bernau*
