--- a/content/blog/ajs123_4.md
+++ b/content/blog/ajs123_4.md
@@ -19,6 +19,10 @@ ___
 
 **Heerwig, Jennifer A. 2017. “Money in the Middle: Contribution Strategies among Affluent Donors to Federal Elections, 1980–2008.” *American Journal of Sociology* 123(4):1004–63.**
 
+**Summary:** Who gives money to political candidates and how has this changed over the last few decades? Individual donors have always been the most significant source of funding for candidates in federal elections, and this remains true today, even in the age of super-PACS. The author assembled data on over 15 million itemized financial contributions (over $200) from the FEC disclosure records. To examine longitudinal contribution patterns, each itemized donation had to be matched to individual donors. While each contribution record contained donor name, address, and occupation, these questions were not standardized, presenting “a daunting number of missing values and discrepancies.” The author employed a probabilistic record-matching procedure to calculate a match score based on the similarity of two records. Once aggregated to individual donors, the final dataset is christened The Longitudinal Elite Contributor Database (LECD). In short: more frequent donors are more likely to be bipartisan givers, but this contribution strategy declined over the past few decades. Previous literature has assumed individual donors to be ideologically motivated and thus more partisan, but these results suggest a more diffused, “access-oriented”, quid pro quo strategy. However, this strategy has declined recently, shedding light on a new angle of the oft-discussed political polarization. 
+
+**Quote:** “Relative to the 1984 cohort, the odds of the 1990 entry year cohort ever giving to both parties decreased by 23%. The odds declined by 40% for the 1994 cohort, by 49%, for the 1996 cohort, and by 59% for the 2000 cohort.” p1025
+
 ___
 
 **VanHeuvelen, Tom. 2017. “Recovering the Missing Middle: A Mesocomparative Analysis of Within-Group Inequality, 1970–2011.” *American Journal of Sociology* 123(4):1064–1116.**
