--- a/content/blog/ajs123_4.md
+++ b/content/blog/ajs123_4.md
@@ -26,6 +26,12 @@ ___
 ___
 
 **VanHeuvelen, Tom. 2017. “Recovering the Missing Middle: A Mesocomparative Analysis of Within-Group Inequality, 1970–2011.” *American Journal of Sociology* 123(4):1064–1116.**
+  
+**Summary:** Reading generalist journals can push you out of your comfort zone. VanHeuvelen’s formidable article did this for me both substantively and methodologically. He starts with a discussion of within-group inequality (WGI). Despite popular attention to between-group inequality (especially in the social sciences), most observable inequality occurs within demographically similar groups. The article also provides a brief review of the Kuznets curve and the Great U-Turn: two popular heuristics for understanding the relationship between economic development and inequality. Constructing an original longitudinal dataset of 722 geographic commuting zones (CZs) in the US over 41 years, the author examines the relationship between economic development and BGI and WGI. Results indicate that WGI, but not BGI, follows a U-shaped pattern. In other words, economic development not only affects the level of inequality at the local level, but also the type and form. By using a meso-level approach, social scientists are afforded a better understanding of how WGI depends on local features of economic development.
+
+
+**Quote:** “Cross-sectionally, WGI accounts for 62% to 72% of total inequality, which simply illustrates that the bulk of inequality in any period of time occurs within, rather than between, groups.” P1065
+
 
 ___
 
